--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "bindings": "^1.2.1",
-    "integer": "^1.0.1",
+    "integer": "jlongster/integer",
     "lzz-gyp": "^0.4.2",
     "to-descriptor": "^1.0.1"
   },
